# cg_cp

./: CMakeLists.txt  CMakeLists_.txt  CmakeLists2.txt  config.h  main.cpp  readme.md  run_lcov.sh  tmp.cpp  tmp.sh
camera/: Camera.cpp  Camera.h
chessboard/: Chessboard.cpp  Chessboard.h
color/: Color.cpp  Color.h
commands/: BaseCommand.cpp  BaseCommand.h
commands/camera_commands/: MoveCameraCommand.cpp  MoveCameraCommand.h  RotateCameraCommand.cpp  RotateCameraCommand.h
commands/draw_commands/: BaseDrawCommand.cpp  BaseDrawCommand.h  QtDrawCommand.cpp  QtDrawCommand.h
commands/load_commands/: BaseLoadCommand.cpp  BaseLoadCommand.h  TrianglesChessboardLoadCommand.cpp  TrianglesChessboardLoadCommand.h  TrianglesModelLoadCommand.cpp  TrianglesModelLoadCommand.h
commands/load_commands/scene/: AllByOneSceneLoadCommand.cpp  AllByOneSceneLoadCommand.h  BaseSceneLoadCommand.cpp  BaseSceneLoadCommand.h  BeginSceneLoadCommand.cpp  BeginSceneLoadCommand.h  TestSceneLoadCommand.cpp  TestSceneLoadCommand.h
commands/material_commands/: SetActiveMaterialCommand.cpp  SetActiveMaterialCommand.h  SetChessboardMaterialCommand.cpp  SetChessboardMaterialCommand.h
commands/scene_commands/: ClearSceneCommand.cpp  ClearSceneCommand.h  FillModelsTableCommand.cpp  FillModelsTableCommand.h
commands/time_commands/: DrawTimeCommand.cpp  DrawTimeCommand.h
commands/transform_commands/: MoveCellModelCommand.cpp  MoveCellModelCommand.h  MoveCommand.cpp  MoveCommand.h  MoveModelCommand.cpp  MoveModelCommand.h  RemoveModelCommand.cpp  RemoveModelCommand.h  RotateCameraCommand.cpp  RotateCameraCommand.h  RotateCommand.cpp  RotateCommand.h  RotateModelCommand.cpp  RotateModelCommand.h  TransformCommand.cpp  TransformCommand.h
data/: bishop.txt  king.txt  knight.txt  pawn.txt  queen.txt  rook.txt  test_model_1.txt  test_model_2.txt  test_model_3.txt  test_model_4.txt  test_model_5_volRevol.txt
data/chessboard/: base_chessboard.txt  black_cells_chessboard.txt  positions_cells.txt  white_cells_chessboard.txt
data_structs/: concepts.h  intersection_type.cpp  intersection_type.h
data_time/: dataTime.txt  input_dataTime.txt
drawer/: Color.cpp  Color.h  Drawer.cpp  Drawer.h  QtDrawer.cpp  QtDrawer.h
exceptions/: BaseException.cpp  BaseException.h  Exceptions.h
facade_scene/: FacadeScene.cpp  FacadeScene.h
gui/: MainWindow.cpp  MainWindow.h  mainWindow.ui
idef0/: idef0.rsf  idef0_0.rsf
light/: Light.cpp  Light.h
load/builder/: VolumeModelBuilder.cpp  VolumeModelBuilder.h
load/builder/triangles_model_builder/: TrianglesModelBuilder.cpp  TrianglesModelBuilder.h
load/director/: Director.cpp  Director.h
load/director/chessboard_director/: ChessboardDirector.cpp  ChessboardDirector.h
load/director/volume_model_director/: VolumeModelDirector.cpp  VolumeModelDirector.h
load/director/volume_model_director/triangles_model_director/: TrianglesModelDirector.cpp  TrianglesModelDirector.h
load/director_solution/: DirectorCreator.cpp  DirectorCreator.h  DirectorSolution.cpp  DirectorSolution.h
load/reader/: Reader.cpp  Reader.h
load/reader/data_chessborad_reader/: DataChessboardReader.cpp  DataChessboardReader.h
load/reader/volume_model_reader/: VolumeModelReader.cpp  VolumeModelReader.h
load/reader/volume_model_reader/triangles_model_reader/: TrianglesModelReader.cpp  TrianglesModelReader.h
load/reader_solution/: ReaderCreator.cpp  ReaderCreator.h  ReaderCreatorMaker.h  ReaderSolution.cpp  ReaderSolution.h
managers/: DrawManager.cpp  DrawManager.h  LoadManager.cpp  LoadManager.h  MaterialManager.cpp  MaterialManager.h  SceneManager.cpp  SceneManager.h  TransformManager.cpp  TransformManager.h
maps/: dataMaps.cpp  dataMaps.h
material/: Material.cpp  Material.h  MaterialSolution.cpp  MaterialSolution.h
matrix4/: Matrix4.cpp  Matrix4.h
model/: CompositeObjectScene.cpp  CompositeObjectScene.h  Model.cpp  Model.h
model/volume_model/: VolumeModel.cpp  VolumeModel.h  VolumeModelImpl.cpp  VolumeModelImpl.h
model/volume_model/triangles/: TrianglesModel.cpp  TrianglesModel.h
object_scene/: CompositeObjectScene.cpp  CompositeObjectScene.h  ObjectScene.cpp  ObjectScene.h
object_scene/model/: BaseModel.cpp  BaseModel.h  VolumeModel.cpp  VolumeModel.h  VolumeModelImpl.h
object_scene/model/triangles/: TrianglesModel.cpp  TrianglesModel.h
old_build/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json  go.sh  out.txt
old_build/.cmake/api/v1/reply/: cache-v2-935afac44935b84ffe59.json  cmakeFiles-v1-40c519bc23b1bdf0a04c.json  codemodel-v2-dd115cf92943d65fac38.json  index-2024-12-07T11-25-02-0913.json  target-app.exe-Debug-16c69e7043b937cc46aa.json  target-app.exe_autogen-Debug-91f75771a63a6bc88745.json
old_build/app.exe_autogen/DMHXEJ42XS/: moc_MainWindow.cpp  moc_MainWindow.cpp.d
old_build/app.exe_autogen/KRHXW7JQHD/: moc_std_ray_tracing_test.cpp  moc_std_ray_tracing_test.cpp.d
old_build/app_autogen/DMHXEJ42XS/: moc_MainWindow.cpp.d
old_build/app_autogen/include/: ui_mainWindow.h
ray/: Ray.cpp  Ray.h
ray_tracing/: RayTracing.cpp  RayTracing.h
ray_tracing/standard_ray_tracing/: StandardRayTracing.cpp  StandardRayTracing.h
scene/: Scene.cpp  Scene.h
test_time/: CMakeLists.txt  main.cpp  save_cmake
tests/: camera_tests.cpp  camera_tests.h  main.cpp  ray_tests.cpp  ray_tests.h  reflect_refract_tests.cpp  reflect_refract_tests.h  std_ray_tracing_test.cpp  std_ray_tracing_test.h  triangle_intersection_tests.cpp  triangle_intersection_tests.h
tests/data_for_tests/: pawn.txt
transform/: MoveAction.cpp  MoveAction.h  RotateAction.cpp  RotateAction.h  TransformAction.cpp  TransformAction.h
triangle/: Triangle.cpp  Triangle.h
vector3/: Vector3.cpp  Vector3.h
